# subly

./: .gitignore  CHANGELOG.md  PRIVACY.md  README.md  RELEASE_NOTES_1.0.0.md  index.html  package.json  pnpm-lock.yaml  splashscreen.html  tsconfig.json  vite.config.ts
.cursor/rules/: app-release-versioning.mdc
.github/: FUNDING.yml
.github/workflows/: android-release.yml  appstore-ios.yml  appstore-macos.yml  build.yml  play-store-release.yml  tests.yml
docs/tailwind-variants/docs/: api-reference.mdx  config.mdx  getting-started.mdx  introduction.mdx  overriding-styles.mdx  slots.mdx  tailwind-v4.mdx  variants.mdx
scripts/: bump-app-version.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/entitlements/: apple.entitlements  ios.plist  macos.appstore.plist  macos.plist
src-tauri/icons/: icon.icns
src-tauri/ios-apple/: widget_reload.swift
src-tauri/ios-apple/SublyWidget/: Info.plist  SublyWidget.entitlements  SublyWidget.swift
src-tauri/ios-apple/SublyWidget/ar.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/de.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/en.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/es.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/fr.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/hi.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/ja.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/ko.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/pt.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/ru.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/tr.lproj/: Localizable.strings
src-tauri/ios-apple/SublyWidget/zh-Hans.lproj/: Localizable.strings
src-tauri/src/: errors.rs  ios_webview_fix.rs  keyring_store.rs  lib.rs  main.rs  models.rs  restart_smoke_tests.rs  state.rs  state_tables.rs  test_support.rs  widget_snapshot.rs
src-tauri/src/commands/: app_data.rs  app_ready.rs  catalog.rs  config.rs  dashboard.rs  expenses.rs  export.rs  logo.rs  mod.rs  notifications.rs  secure_storage.rs  seed.rs  storage.rs  subscription_credentials.rs  subscriptions.rs  tray.rs
src-tauri/src/commands/ai/: catalog_snapshot.rs  dto.rs  heuristics.rs  json_parse.rs  mod.rs  shared.rs
src-tauri/src/commands/ai/extract/: context.rs  expense.rs  mapping.rs  mod.rs  raw.rs  receipt.rs  statement.rs  subscription.rs  vision_io.rs
src-tauri/src/commands/ai/extract/smart/: expense.rs  mod.rs  subscription.rs
src-tauri/src/commands/ai/prompts/: expense.rs  fewshot.rs  fragments.rs  mod.rs  receipt.rs  smart.rs  statement.rs  subscription.rs
src-tauri/src/commands/ai/providers/: deepseek.rs  google_gemini.rs  groq.rs  mistral.rs  mod.rs  openai.rs  openai_compat.rs  openrouter.rs  presets.rs
src-tauri/src/commands/rates/: flags.rs  history.rs  mod.rs
src-tauri/src/commands/rates/providers/: apilayer.rs  currencyapi.rs  exchangerate.rs  fixer.rs  frankfurter.rs  mod.rs  openexchangerates.rs
src-tauri/src/commands/sync/: config.rs  mod.rs  oauth.rs  orchestrator.rs  redb_write_flag.rs  state.rs  types.rs  wire.rs
src-tauri/src/commands/sync/providers/: dropbox.rs  gdrive.rs  icloud.rs  icloud_native.rs  mod.rs  onedrive.rs  webdav.rs
src-tauri/src/migrations/: 001_create_initial_tables.sql  002_add_rate_history.sql
src/components/ai/: AiImportDialog.vue  AiImportPreviewList.vue  AiQuickAddExpense.vue  AiQuickAddSubscription.vue  AiSmartDialog.vue  AiSubscriptionImportPreviewList.vue
src/components/calendar/: CalendarDayModal.vue  CalendarGrid.vue  CalendarHeader.vue  CalendarMonthStats.vue
src/components/dashboard/: AvgCheckWidget.vue  CategoryAverages.vue  DayOfWeekWidget.vue  ExpenseSummary.vue  ForecastCard.vue  LifetimeCosts.vue  MonthCompareWidget.vue  OverdueAlert.vue  RateHistoryWidget.vue  SpendingTrend.vue  StatsCards.vue  TagExpensesWidget.vue  TopExpensesWidget.vue  UpcomingPayments.vue
src/components/expenses/: ExpenseDetail.vue  ExpenseForm.vue
src/components/layout/: AppHeader.vue  AppLayout.vue  AppSidebar.vue  MobileTabBar.vue
src/components/settings/: AiSection.vue  AppearanceSection.vue  BudgetNotificationsSection.vue  CategoriesSection.vue  (+11 more)
src/composables/: useAlerts.ts  useChartTheme.ts  useClipboard.ts  useConfirmDialog.ts  useCurrencyFormat.ts  useHeaderActions.ts  useLocaleFormat.ts  useMobileTabBarViewport.ts  useScrollLock.ts  useToast.ts  useZodErrors.ts  useZodLiveForm.ts
src/constants/: notificationTemplateDefaults.ts
src/i18n/: ar.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  index.ts  ja.ts  ko.ts  pt.ts  ru.ts  tr.ts  zh.ts
src/lib/: echarts.ts  tv.ts
src/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pt.json  ru.json  tr.json  zh.json
src/pages/: CalendarPage.vue  CurrencyRatesPage.vue  DashboardPage.vue  ExpensesPage.vue  SettingsPage.vue  SubscriptionsPage.vue
src/router/: index.ts
src/schemas/: appData.ts
src/services/: aiClient.ts  analytics.ts  appDataClient.ts  calculations.ts  catalogClient.ts  commandClient.ts  configClient.ts  currencyFlags.ts  currencyUpdater.ts  dashboardClient.ts  database.ts  db-schema.ts  expensesClient.ts  export.ts  exportClient.ts  fsClient.ts  kysely-tauri.ts  logoAssets.ts  logoClient.ts  notifications.ts  notificationsClient.ts  pushNotifications.ts  ratesClient.ts  secureStorageClient.ts  seed.ts  sound.ts  storage.ts  subscriptionCredentialsClient.ts  subscriptionsClient.ts  syncClient.ts  telegram.ts  tray.ts
src/stores/: aiConfigStore.ts  appMetaStore.ts  appStore.ts  calendarStore.ts  catalog.ts  catalogsUsageStore.ts  converter.ts  dashboardStore.ts  expenses.ts  expensesStore.ts  nowStore.ts  settings.ts  subscriptions.ts  subscriptionsStore.ts
src/types/: dashboardIpc.ts
src/utils/: formatError.ts
store-assets/: APP_STORE_LISTING_EN.md
tailwind-variants/docs/: _meta.json  comparison.mdx  composing-components.mdx  examples.mdx  faq.mdx  migration.mdx
(+48 files in other folders)
