[package]
name = "subly"
version = "0.0.0"
description = "Subly — Subscription & Expense Tracker"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "subly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
# 2.4.8 yanked on crates.io; 2.4.1 of single-instance requires ^2.4.8 — keep 2.4.7 until Tauri republishes.
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["json"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
dirs = "6"
libc = "0.2"
redb = "4"
tauri-plugin-persisted-scope = "2"
chrono = { version = "0.4", default-features = true }
zip = "8"
base64 = "0.22"
postcard = { version = "1.1", features = ["use-std"] }
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
rand = "0.10"
sha2 = "0.10"
keyring = "3.6"
totp-rs = "5.7"
url = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
rqrr = "0.10"
percent-encoding = "2"
zstd = "0.13"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = { version = "0.6.3", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "NSFileManager",
  "NSString",
  "NSURL",
  "NSError",
  "NSDictionary",
  "NSFileCoordinator",
  "block2",
] }
block2 = { version = "0.6.1", default-features = false, features = ["alloc", "std"] }

[target.'cfg(target_os = "ios")'.dependencies]
ureq = { version = "3", default-features = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
# Pin 2.4.0: 2.4.1 depends on tauri-plugin-deep-link ^2.4.8 (yanked). `cargo outdated` latest-workspace fails unless you use e.g. `-x tauri-plugin-single-instance` (see package.json script `cargo:outdated`).
tauri-plugin-single-instance = { version = "=2.4.0", features = ["deep-link"] }

[dev-dependencies]
tempfile = "3"

