[package]
name = "subly"
version = "0.0.0"
description = "Subly — Subscription & Expense Tracker"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "subly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.7.1"
# 2.4.8 was yanked; current 2.4.9 is fine and unlocks newer tauri-plugin-single-instance (≥2.4.1).
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-log = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-http = { version = "2.5.9", features = ["json"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
dirs = "6"
libc = "0.2"
redb = "4"
tauri-plugin-persisted-scope = "2.3.7"
chrono = { version = "0.4", default-features = true }
zip = "8"
base64 = "0.22"
postcard = { version = "1.1", features = ["use-std"] }
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
rand = "0.10"
sha2 = "0.10"
# Cross-platform credential storage. `keyring-core` is the API; per-platform
# backend crates are added in target-specific blocks below and registered as
# the default store in `crate::keyring_store::ensure_init`.
keyring-core = "1"
totp-rs = "5.7"
url = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
rqrr = "0.10"
percent-encoding = "2"
zstd = "0.13"
# AI SDK — language-model abstraction over OpenAI-compatible providers
# (OpenRouter, Ollama, LM Studio, …). Vision input is not supported by aisdk
# 0.5; image-based receipt OCR (Phase 5) bypasses aisdk and POSTs directly
# to the chat-completions endpoint with reqwest.
#
# NOTE: `openai` is enabled because aisdk 0.5.2's `openai_compatible/embedding_model.rs`
# unconditionally imports `crate::providers::openai`, so the `openaicompatible`
# feature can't compile in isolation.
aisdk = { version = "0.5", default-features = false, features = ["language-model-request", "openai", "openaicompatible"] }
# AI statement import: heuristics-first parsing for CSV/XLSX/PDF/JSON.
csv = "1.3"
encoding_rs = "0.8"
calamine = "0.30"
pdf-extract = "0.9"
regex = "1.11"
# AI receipt OCR: vision models aren't supported by aisdk 0.5, so we POST
# directly to the OpenAI-compatible chat-completions endpoint.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS non-sandboxed apps: use the legacy login keychain (compatible with
# every keyring-3 deployment in the wild).
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = { version = "0.6.3", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "NSFileManager",
  "NSString",
  "NSURL",
  "NSError",
  "NSDictionary",
  "NSFileCoordinator",
  "block2",
] }
block2 = { version = "0.6.1", default-features = false, features = ["alloc", "std"] }

[target.'cfg(target_os = "ios")'.dependencies]
ureq = { version = "3", default-features = true }
# iOS apps are always sandboxed and code-signed, so they must use the
# Protected Data store (Apple's Data Protection keychain).
apple-native-keyring-store = { version = "1", features = ["protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows Credential Manager backend.
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux Secret Service backend (gnome-keyring, KWallet via DBus). `vendored`
# statically links openssl so we don't depend on system libssl.
dbus-secret-service-keyring-store = { version = "1", features = ["vendored"] }

[target.'cfg(target_os = "android")'.dependencies]
# Android Keystore-backed credential store. Encrypts secrets with a key from
# the device's hardware-backed Android Keystore and persists them via
# SharedPreferences. Tauri Mobile initialises `ndk-context` automatically,
# so no extra Kotlin glue is required.
android-native-keyring-store = "1"
# `aisdk` and `tauri-plugin-http` pull in `reqwest` with the default `native-tls`
# feature, which expects a system OpenSSL via pkg-config. The Android NDK
# sysroot doesn't ship one, so we vendor OpenSSL for cross-builds — Cargo
# unions features across the dependency graph, so flipping `vendored` here
# is enough to force a self-built libssl on `aarch64-linux-android` and the
# other Android targets.
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
# Now usable: tauri-plugin-deep-link 2.4.9 is published (no longer yanked), so single-instance ≥2.4.1 resolves cleanly.
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }

[dev-dependencies]
tempfile = "3"

