[package]
name = "subly"
version = "0.0.0"
description = "Subly — Subscription & Expense Tracker"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "subly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.7.1"
# 2.4.8 was yanked; current 2.4.9 is fine and unlocks newer tauri-plugin-single-instance (≥2.4.1).
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-log = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-http = { version = "2.5.9", features = ["json"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
dirs = "6"
libc = "0.2"
redb = "4"
tauri-plugin-persisted-scope = "2.3.7"
chrono = { version = "0.4", default-features = true }
zip = "8"
base64 = "0.22"
postcard = { version = "1.1", features = ["use-std"] }
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
rand = "0.10"
sha2 = "0.10"
totp-rs = "5.7"
url = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
rqrr = "0.10"
percent-encoding = "2"
zstd = "0.13"
# AI SDK — language-model abstraction over OpenAI-compatible providers
# (OpenRouter, Ollama, LM Studio, …). Vision input is not supported by aisdk
# 0.5; image-based receipt OCR (Phase 5) bypasses aisdk and POSTs directly
# to the chat-completions endpoint with reqwest.
#
# NOTE: `openai` is enabled because aisdk 0.5.2's `openai_compatible/embedding_model.rs`
# unconditionally imports `crate::providers::openai`, so the `openaicompatible`
# feature can't compile in isolation.
aisdk = { version = "0.5", default-features = false, features = ["language-model-request", "openai", "openaicompatible"] }
# AI statement import: heuristics-first parsing for CSV/XLSX/PDF/JSON.
csv = "1.3"
encoding_rs = "0.8"
calamine = "0.30"
pdf-extract = "0.9"
regex = "1.11"
# AI receipt OCR: vision models aren't supported by aisdk 0.5, so we POST
# directly to the OpenAI-compatible chat-completions endpoint.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-keyring-store = "0.1.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = { version = "0.6.3", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "NSFileManager",
  "NSString",
  "NSURL",
  "NSError",
  "NSDictionary",
  "NSFileCoordinator",
  "block2",
] }
block2 = { version = "0.6.1", default-features = false, features = ["alloc", "std"] }

[target.'cfg(target_os = "ios")'.dependencies]
ureq = { version = "3", default-features = true }

[target.'cfg(target_os = "android")'.dependencies]
# Some transitive deps still pull `native-tls` / OpenSSL; Android NDK has no system libssl.
# Cargo unions features across the graph — `vendored` forces a self-built OpenSSL for Android ABIs.
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
# Now usable: tauri-plugin-deep-link 2.4.9 is published (no longer yanked), so single-instance ≥2.4.1 resolves cleanly.
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }

[dev-dependencies]
tempfile = "3"

